@@ -1,9 +1,9 @@
 #filters
-  - Setting.opportunity_stage.each do |key, value|
+  - Setting.opportunity_stage.each do |value, key|
     .check_box{:style => "border-bottom: 1px silver dotted;"}
       %div{:style => "float:right;"}
-        = @opportunity_stage_total[value]
-      = opportunity_stage_checbox(value, @opportunity_stage_total[value]) << " " << key
+        = @opportunity_stage_total[key]
+      = opportunity_stage_checbox(key, @opportunity_stage_total[key]) << " " << value
 
   .check_box{:style => "border-bottom: 1px silver dotted;"}
     %div{:style => "float:right;"}
