@@ -1,0 +1,20 @@
+%li[task]{ highlightable(dom_id(task, :tools)) }
+  - if task.category
+    .strip{:class => task.category}= Setting.task_category[task.category.intern]
+  - else
+    .strip &nbsp;
+  %div
+    .tools{ hidden, :id => dom_id(task, :tools) }
+      %small
+        = link_to("Edit", task_path(task)) << " | "
+        = link_to_remote("Delete!", :url => task_path(task), :method => :delete, :before => visual_effect(:highlight, dom_id(task), :startcolor => "#afeeee"))
+      &nbsp;
+    = task.name
+    %dt
+      - if task.due_at < Date.today
+        %span.warn= distance_of_time_in_words(task.due_at, Date.today) << " late, was due on #{task.due_at.strftime('%b %e')}"
+      - elsif task.due_at > Date.today
+        = "Due in " << distance_of_time_in_words(Date.today, task.due_at)
+      - else
+        %span.cool Due today!
+      
