@@ -3,25 +3,40 @@
 #
 # Table name: tasks
 #
-#  id          :integer(4)      not null, primary key
-#  uuid        :string(36)
-#  user_id     :integer(4)
-#  assigned_to :integer(4)
-#  name        :string(255)     default(""), not null
-#  asset_id    :integer(4)
-#  asset_type  :string(255)
-#  priority    :string(32)
-#  status      :string(32)
-#  due_at      :datetime
-#  deleted_at  :datetime
-#  created_at  :datetime
-#  updated_at  :datetime
+#  id           :integer(4)      not null, primary key
+#  uuid         :string(36)
+#  user_id      :integer(4)
+#  assigned_to  :integer(4)
+#  name         :string(255)     default(""), not null
+#  asset_id     :integer(4)
+#  asset_type   :string(255)
+#  priority     :string(32)
+#  category     :string(32)
+#  due_at       :datetime
+#  completed_at :datetime
+#  deleted_at   :datetime
+#  created_at   :datetime
+#  updated_at   :datetime
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+<%
+  require "faker"
+  category = %w(call email folowup lunch meeting money presentation trip) << ""
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+  for i in (1..30) do
+%>
+task<%= i %>:
+  id           : <%= i %>
+  user_id      : <%= rand(5) + 1 %>
+  assigned_to  : <%= rand(5) + 1 %>
+  name         : <%= Faker::Lorem::sentence(rand(2) + 2).sub(".", "") %>
+  asset_id     : <%=  %>
+  asset_type   : <%=  %>
+  priority     :
+  category     : <%= category[rand(category.size)] %>
+  due_at       : <%= rand(2) == 1 ? Date.today + rand(15).days : Date.today - rand(15).days %>
+  completed_at :
+  deleted_at   :
+  created_at   : <%= starts = Date.today - rand(15).days %>
+  updated_at   : <%= starts + rand(5).days %>
+<% end %>
